force-app/main/default/objects/ErrorLogCS__c/ErrorLogCS__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Define properties of the Error Log object - what to do for specific errors that are logged.</description>
    <label>Error Log</label>
</CustomObject>