force-app/main/default/objects/ErrorLogCS__c/fields/EmailOnError__c.field-meta.xml
<CustomField>
    <fullName>EmailOnError__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If an error occurs, a comma separated list of names to email that the error occurred.</inlineHelpText>
    <label>Email On Error</label>
    <length>80</length>
    <type>Text</type>
</CustomField>