force-app/main/default/objects/ErrorLogCS__c/fields/LogData__c.field-meta.xml
<CustomField>
    <fullName>LogData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Class has to be coded to look for this.</description>
    <inlineHelpText>Log debug data from this class in an Error Log.</inlineHelpText>
    <label>LogData</label>
    <type>Checkbox</type>
</CustomField>