force-app/main/default/objects/ErrorLogCS__c/fields/NbrErrorRetry__c.field-meta.xml
<CustomField>
    <fullName>NbrErrorRetry__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>If this ends in an error that can be retried (ex Row Lock), how many times to retry. Any number greater than 0 will mean that yes we retry errors for this type. Enter 0 or leave null for no retries.</inlineHelpText>
    <label>Nbr Error Retry</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>